--- a/DirectoryScanner.WPF/MainWindow.xaml
+++ b/DirectoryScanner.WPF/MainWindow.xaml
@@ -4,9 +4,37 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:DirectoryScanner.WPF"
+        xmlns:vm="clr-namespace:DirectoryScanner.WPF.ViewModel"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow" Height="450" Width="800" MinWidth="500" MinHeight="400">
+    <Window.DataContext>
+        <vm:AppViewModel></vm:AppViewModel>
+    </Window.DataContext>
+    <Window.Resources>
+        <Style TargetType="Button">
+            <Setter Property="FontFamily" Value="JetBrains Mono"/>
+            <Setter Property="Margin" Value="3"/>
+            <Setter Property="FontSize" Value="14"/>
+        </Style>
+    </Window.Resources>
     <Grid>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*" MinWidth="300"/>
+            <ColumnDefinition Width="Auto"/>
+            <ColumnDefinition Width="*" MinWidth="200"/>
+        </Grid.ColumnDefinitions>
 
+        <TreeView Grid.Column="0">
+            
+        </TreeView>
+
+        <GridSplitter Grid.Column="1" Width="2" HorizontalAlignment="Stretch" Background="BlueViolet"></GridSplitter>
+
+        <StackPanel Grid.Column="2">
+            <Label Margin="3" FontFamily="JetBrains Mono" FontSize="14" Content="{Binding Path}"/>
+            <Button Command="{Binding SetDirectoryCommand}">Choose directory</Button>
+            <Button Command="{Binding StartCommand}">Start scanning</Button>
+            <Button Command="{Binding StopCommand}">Stop scanning</Button>
+        </StackPanel>
     </Grid>
 </Window>
