--- a/DirectoryScanner.WPF/MainWindow.xaml
+++ b/DirectoryScanner.WPF/MainWindow.xaml
@@ -3,6 +3,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:fa="http://schemas.fontawesome.io/icons/"
         xmlns:local="clr-namespace:DirectoryScanner.WPF"
         xmlns:vm="clr-namespace:DirectoryScanner.WPF.ViewModel"
         mc:Ignorable="d"
@@ -28,11 +29,11 @@
             <ColumnDefinition Width="*" MinWidth="200"/>
         </Grid.ColumnDefinitions>
 
-        <TreeView ItemsSource="{Binding Tree.Children}" BorderThickness="0">
-            <TreeView.ItemTemplate >
+        <TreeView ItemsSource="{Binding Tree.Children}" BorderThickness="0" Background="White">
+            <TreeView.ItemTemplate>
                 <HierarchicalDataTemplate ItemsSource="{Binding Path=Children}">
                     <StackPanel Orientation="Horizontal">
-                        <Image Source="Icons/folder.png" MaxHeight="20"></Image>
+                        <fa:ImageAwesome Icon="{Binding Icon}" Height="12" Foreground="{Binding IconColor}" Margin="0 0 3 0"></fa:ImageAwesome>
                         <TextBlock Style="{StaticResource Style}" FontWeight="Bold" Text="{Binding Name}"></TextBlock>
                         <TextBlock Style="{StaticResource Style}" Text="  ("></TextBlock>
                         <TextBlock Style="{StaticResource Style}" Text="{Binding Size}"></TextBlock>
